2010-01-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Korrekte Anzeige TypoLink mit Titel usw. (WWW-510)
	* Bugfixes Oeffnungszeitendarstellung

2011-01-10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Vereinheitlichung Verzeichnisstrukturen
	* RealUrl Config (WWW-505)
	* Pflichtangabe der Uhrzeit mit Formatierung durch : (WWW-507)

2010-12-23 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Darstellung der Bibliotheken in der Infobox inkl. Anker
	* Platzhalter fuer Maps

2010-12-21 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Oeffnungszeiten Check
	* Darstellung geoeffnet oder geschlossen

2010-12-17 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Manual erstellt
	* Abwaertskompatibilitaet zu TYPO3 v4.4.x
	* Hartcodierte StoragePID aus dem Backendtemplate entfernt
	* Icon fuer Oeffnungszeiten

2010-12-16 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Lokalisierung
	* Aenderung Icon im Backend
	* Feld fuer die Sortierung in der Bibliothektstabelle
	* CSS in Extension statt in Haupttemplate integriert
	* Ausgabe, Formatierung und Sortierung der Oeffnungszeiten

2010-12-15 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Hinzufuegen weiterer Legacy Felder
	* Optimierung Anpassung im Backend
	* Fakultaeten koennen nun auch durch einen externen Link repraesentiert werden
	* Neues Extensionicon
	* Bibliothek kann einen externen Link haben
	* Links auf Kataloge und GOK

2010-12-13 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Layouts und Felder geaendert

2010-12-06 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* IRRE Oeffnungszeiten

2010-12-01 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
	* Refactoring
	* MM Tabellen geloescht
	* Controller angepasst
	* Models erweitert
	* Ansprechpartner nicht mehr aus tt_address
	* Aufloesung von Abhaengigkeiten