@@ -1,4 +1,6 @@
 <div class="tx-standorte-pi1">
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+
 <f:renderFlashMessages class="tx-efempty-flash-message" />
 <f:render section="bibos" />
 
